--- a/main.css
+++ b/main.css
@@ -39,3 +39,13 @@ header{
 	max-width: 50px;
 }
 
+.main_image{
+	width: 100%;
+	position:relative;
+	background-image: url("./images/Fjords.jpg");
+	background-size: cover;
+	margin-top: 2em;
+	height:100%;
+}
+
+
