--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body,html{
+body,html {
 	box-sizing: border-box;
 	margin-left: auto;
 	margin-right: auto;
@@ -12,40 +12,83 @@ body,html{
 /*
 content 
 */
-header{
-	height:90px;
+header {
+	height:80px;
 	border-bottom:thick solid #7d97ad;
-	vertical-align: botom;
+	vertical-align: bottom;
+	color: #2d3c49;
+	text-transform: uppercase;
 }
-.header_text{
+.header_text {
 	text-align:right;
 	display: inline-block;
 	float: right;
 	
 }
-.name{
-	font-size: 3em;
-	color: #2d3c49;
-	text-transform: uppercase;
+.header_name {
+	font-size: 2em;
 	font-weight: 100;
-	}
-.description{
+}
+.header_description {
 	font-size: 1em;
 	font-weight:normal;
 }
 
-.logo{
+.logo {
 	max-height: 50px;
 	max-width: 50px;
 }
 
-.main_image{
+.main_image {
 	width: 100%;
-	position:relative;
 	background-image: url("./images/Fjords.jpg");
-	background-size: cover;
+	background-size:cover;
 	margin-top: 2em;
 	height:100%;
 }
+
+h1{
+	font-size: 2.25em;
+	font-weight: 100;
+	color: #7d97ad;
+}
+	
+}
+.work_container {
+	margin-top: 2em;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+.work_content {
+	width:30%;
+	margin: 0;
+	display: inline-block;
+}
+
+.work_image {
+	width:40%;
+	display:block;
+	margin: auto;
+}
+
+figcaption {
+	color:#2d3c49;
+	text-align: center;
+	margin-top: 1.75em;
+}
+
+.work_link {
+	text-align: center;	
+}
+
+a {
+	color:#7d97ad;
+	font-size: 1em;
+	margin-top: 1em;
+}
+
+
 
 
